# aitg

./: .gitignore  aitg.csproj  convert.py  entries.txt  export_presets.cfg  icon.svg.import  project.godot  rust.gdextension
assets/: 3523.png.import  anti-idle-logo.svg.import  defaultBg.png.import  sc.webp.import
assets/fonts/: idle-planet.ttf.import  mclaren.ttf.import  noto-sans-jp.ttf.import  ronda-seven-bold.ttf.import  ronda-seven.ttf.import  tempesta-seven-bold.ttf.import  tempesta-seven-condensed.ttf.import  tempesta-seven-extended-bold.ttf.import  tempesta-seven-extended.ttf.import  tempesta-seven.ttf.import  terminus.png.import
assets/shapes/: 8177.svg.import  8177_2.svg.import  8177edit - Copie.svg.import  8177edit.svg.import  cog.svg.import
decompile/: report.html  report.py
decompile/scripts/: DefineSprite_2416_frame_1_DoAction.as  DefineSprite_2656_frame_1_PlaceObject2_2655_45.as  frame_13_DoAction_2.as  frame_3_DoAction.as  frame_4_DoAction.as  frame_9_DoAction.as
godot/: AwesomeButton.cs  BottomBar.tscn  FpsDisplay.cs  Logo.png.import  MainMenu.tscn  MenuBg.png.import  UpNumber.cs
godot/fonts/: 10175_YOzFont-ProN-R.ttf.import  (+85 more)
lib/: Globals.cs  Node2d.cs  Sol.cs
rust/: Cargo.toml  build_targets.sh  set_up_rustup.sh
rust/aitg/: Cargo.toml  out.ron  out_global.ron
rust/aitg/src/: global.rs  lib.rs  sparse_array.rs
rust/aitg/src/classes/: mod.rs  save_label.rs
rust/aitg/src/logic/: ba.rs  mod.rs
rust/aitg/src/save/: de.rs  mod.rs  parse.rs
rust/aitg/tests/sol/: karlie_save.sol
scenes/: loader.tscn  main.tscn  sprite_2d.gd  sub.tscn
(+43 files in other folders)
